WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309677
Setting model.currentTime doesn't work with the WebModelPlayer
https://bugs.webkit.org/show_bug.cgi?id=309677
Summary
Setting model.currentTime doesn't work with the WebModelPlayer
Etienne
Reported
2026-03-11 07:28:52 PDT
Setting model.currentTime doesn't work with the WebModelPlayer
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2026-03-11 07:43:55 PDT
<
rdar://problem/172279090
>
Etienne
Comment 2
2026-03-11 07:44:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60365
EWS
Comment 3
2026-03-11 15:12:21 PDT
Committed
309098@main
(a798a7d546e6): <
https://commits.webkit.org/309098@main
> Reviewed commits have been landed. Closing PR #60365 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug