Setting model.currentTime doesn't work with the WebModelPlayer https://bugs.webkit.org/show_bug.cgi?id=309677 <rdar://172279090>

Reviewed by Mike Wyrzykowski.

Add the missing plumbing so that setting the `currentTime` attribute
on a model properly updates the `USDModel`.

* Source/WebKit/GPUProcess/graphics/Model/ModelTypes.h:
* Source/WebKit/GPUProcess/graphics/Model/USDModel.swift:
(USDModelLoader.loadModel(from:)):
(USDModelLoader.loadModel(_:)):
(USDModelLoader.setupTimes(from:)):
(USDModelLoader.duration):
(USDModelLoader.setCurrentTime(_:)):
(USDModelLoader.update(_:)):
(WKBridgeModelLoader.setCurrentTime(_:)):
Clarify animation timing management:
- startTime, endTime, deltaTime all use wall clock values
- the timeCodePerSecond is only applied at the usdLoader boundary

* Source/WebKit/WebProcess/Model/WebModelPlayer.h:
* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::WebModelPlayer::currentTime const):
(WebKit::WebModelPlayer::setCurrentTime):
Like in ModelProcessModelPlayer, clamp the currentTime value before
sending it forward.

Canonical link: https://commits.webkit.org/309098@main